cabal-version:      2.4
name:               okane
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis:           Source code for Okane, a DSL to represent money transactions

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             nielsenmax
maintainer:         maxianielsen@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable okane
    main-is:          Main.hs
    
    -- Modules included in this executable, other than Main.
    other-modules:
        Lang
        Parse
        Eval
        MonadOkane
        Global
        Errors
        Common

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    ghc-options: 
        -threaded 
        -rtsopts 
        -with-rtsopts=-N 
        -fwarn-tabs 
        -fwarn-unused-imports 
        -fwarn-missing-signatures 
        -fwarn-name-shadowing 
        -fwarn-incomplete-patterns
    build-depends:    
          base >=4.16.4.0 && <4.19
        , binary
        , bytestring
        , containers
        , exceptions
        , extra
        , filepath
        , haskeline
        , mtl
        , optparse-applicative
        , parsec
        , pretty
        , prettyprinter
        , prettyprinter-ansi-terminal
        , text
        , extra
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite okane-test
    type:               exitcode-stdio-1.0
    main-is:            Test.hs
    other-modules:
        Lang
        Parse
        Eval
        MonadOkane
        Global
        Errors
        Common
    build-depends:    
          base >=4.16.4.0 && <4.19
        , containers
        , HUnit
        , mtl
        , parsec
        , extra
    hs-source-dirs:   app
    default-language: Haskell2010
